changed index-2.html to index.html

--- a/calendar.html
+++ b/calendar.html
@@ -150,7 +150,7 @@
 						<div class="col">
 							<nav aria-label="breadcrumb" class="page-breadcrumb">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
+									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Calendar</li>
 								</ol>
 							</nav>
