--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
-							<a href="index-2.html" class="menu-logo">
+							<a href="index.html" class="menu-logo">
 								<img src="assets/img/logo.jpg" class="img-fluid" alt="Logo">
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
