--- a/change-password.html
+++ b/change-password.html
@@ -166,7 +166,7 @@
 						<div class="col-md-12 col-12">
 							<nav aria-label="breadcrumb" class="page-breadcrumb">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
+									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Change Password</li>
 								</ol>
 							</nav>
@@ -234,7 +234,7 @@
 												</a>
 											</li>
 											<li>
-												<a href="index-2.html">
+												<a href="index.html">
 													<i class="fas fa-sign-out-alt"></i>
 													<span>Logout</span>
 												</a>
