--- a/chat-doctor.html
+++ b/chat-doctor.html
@@ -58,7 +58,7 @@
 						</div>
 						<ul class="main-nav">
 							<li>
-								<a href="index-2.html">Home</a>
+								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu active">
 								<a href="#">Doctors <i class="fas fa-chevron-down"></i></a>
