--- a/doctor-change-password.html
+++ b/doctor-change-password.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
-							<a href="index-2.html" class="menu-logo">
+							<a href="index.html" class="menu-logo">
 								<img src="assets/img/logo.jpg" class="img-fluid" alt="Logo">
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
@@ -166,7 +166,7 @@
 						<div class="col-md-12 col-12">
 							<nav aria-label="breadcrumb" class="page-breadcrumb">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
+									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Change Password</li>
 								</ol>
 							</nav>
@@ -264,7 +264,7 @@
 												</a>
 											</li>
 											<li>
-												<a href="index-2.html">
+												<a href="index.html">
 													<i class="fas fa-sign-out-alt"></i>
 													<span>Logout</span>
 												</a>
