--- a/doctor-dashboard.html
+++ b/doctor-dashboard.html
@@ -43,7 +43,7 @@
 								<span></span>
 							</span>
 						</a>
-						<a href="index-2.html" class="navbar-brand logo">
+						<a href="index.html" class="navbar-brand logo">
 							<img src="assets/img/logo.jpg" class="img-fluid" alt="Logo">
 						</a>
 					</div>
@@ -166,7 +166,7 @@
 						<div class="col-md-12 col-12">
 							<nav aria-label="breadcrumb" class="page-breadcrumb">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
+									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Dashboard</li>
 								</ol>
 							</nav>
@@ -265,7 +265,7 @@
 												</a>
 											</li>
 											<li>
-												<a href="index-2.html">
+												<a href="index.html">
 													<i class="fas fa-sign-out-alt"></i>
 													<span>Logout</span>
 												</a>
